about and skills page added

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -66,9 +66,10 @@
           </div>
           <div class="col-md-2">
             <h6>Follow me :</h6>
-            <div class='icon'>
+            <div class="icon">
               <a href="">
-                <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+                <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i
+              ></a>
               <a href="">
                 <i class="fa fa-github fa-2x" aria-hidden="true"></i>
               </a>
@@ -84,6 +85,51 @@
       </div>
     </div>
 
+    <div class="row" id='about'>
+      <div class="col col-md-6">
+        <div class="card">
+          <img src="./assets/dp.svg" alt="" />
+        </div>
+      </div>
+      <div class="col col-md-6">
+        <div class="card text-center">
+          <h1>About me</h1>
+          <h6>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum
+            tempore magnam ab dolorem possimus! Enim sit ipsum consequatur esse
+            similique, aliquid magnam dolore illo quibusdam porro odio, aperiam
+            hic accusamus.
+          </h6>
+          <h6>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum
+            tempore magnam ab dolorem possimus! Enim sit ipsum consequatur esse
+            similique, aliquid magnam dolore illo quibusdam porro odio, aperiam
+            hic accusamus.
+          </h6>
+          <h6>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum
+            tempore magnam ab dolorem possimus! Enim sit ipsum consequatur esse
+            similique, aliquid magnam dolore illo quibusdam porro odio, aperiam
+            hic accusamus.
+          </h6>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="row" id='projects'></div> -->
+    <div class="container">
+      <div class="row w-25 text-center" id="skills">
+        <h1>My Skills</h1>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Web Development</li>
+          <li class="list-group-item">HTML5/CSS3/JS</li>
+          <li class="list-group-item">Bootstrap</li>
+          <li class="list-group-item">Blockchain Technology</li>
+          <li class="list-group-item">Investment and Cryptocurrency</li>
+          <li class="list-group-item">Project Finance</li>
+        </ul>
+      </div>
+    </div>
+   
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
